tests-integration/fixtures/checking/132_derive_eq_1_higher_kinded/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
MkWrap ::
  forall (t4 :: Type) (f :: (t4 :: Type) -> Type) (a :: (t4 :: Type)).
    (f :: (t4 :: Type) -> Type) (a :: (t4 :: Type)) ->
    Wrap @(t4 :: Type) (f :: (t4 :: Type) -> Type) (a :: (t4 :: Type))
MkWrapNoEq1 ::
  forall (t10 :: Type) (f :: (t10 :: Type) -> Type) (a :: (t10 :: Type)).
    (f :: (t10 :: Type) -> Type) (a :: (t10 :: Type)) ->
    WrapNoEq1 @(t10 :: Type) (f :: (t10 :: Type) -> Type) (a :: (t10 :: Type))

Types
Wrap :: forall (t4 :: Type). ((t4 :: Type) -> Type) -> (t4 :: Type) -> Type
WrapNoEq1 :: forall (t10 :: Type). ((t10 :: Type) -> Type) -> (t10 :: Type) -> Type

Data
Wrap
  Quantified = :1
  Kind = :0

WrapNoEq1
  Quantified = :1
  Kind = :0


Roles
Wrap = [Representational, Nominal]
WrapNoEq1 = [Representational, Nominal]

Derived
derive (Eq1 (f :: Type -> Type), Eq (a :: Type)) => Eq (Wrap @Type (f :: Type -> Type) (a :: Type) :: Type)
derive Eq (a :: Type) => Eq (WrapNoEq1 @Type (f :: Type -> Type) (a :: Type) :: Type)

Diagnostics
error[NoInstanceFound]: No instance found for: Eq1 (f :: Type -> Type)
  --> 12:1..12:43
   |
12 | derive instance Eq a => Eq (WrapNoEq1 f a)
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
